fix scrollbar on /admin/songs

--- a/src/css/songlist.css
+++ b/src/css/songlist.css
@@ -19,7 +19,7 @@
 	overflow-y: scroll;
 }
 
-.scroll-wrapper-admin::-webkit-scrollbar {
+.songs-wrapper-admin::-webkit-scrollbar {
 	display: none;
 }
 
